--- a/style.css
+++ b/style.css
@@ -5,20 +5,19 @@
     --card-color: black;
     --misc-color: blue;
 }
-
 body {
     background-color: var(--main-background-color);
     color: var(--main-font-color);
     font-family: "Lucida Console", Courier, monospace;
 }
-
 a {
     color: var(--card-color);
 }
-
+img, .card {
+    height: 300px;
+}
 .card {
     width: 680px;
-    height: 300px;
     background-color: var(--card-color);
     border-radius: 15px;
     padding: 30px;
@@ -26,11 +25,6 @@ a {
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
 }
-
-img {
-    height: 300px;
-}
-
 .card-content {
     width: 440px;
     float: right;
@@ -49,7 +43,7 @@ ul {
 }
 
 .item {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .path {
