--- a/style.css
+++ b/style.css
@@ -1,59 +1,41 @@
 :root {
     --main-font-color: rgb(223, 223, 223);
-    --main-background-color: rgb(34, 34, 34);
     --main-important-color: orange;
-    --card-color: black;
-    --misc-color: blue;
+    --bg: black;
 }
 body {
-    background-color: var(--main-background-color);
+    background-color: var(--bg);
     color: var(--main-font-color);
     font-family: "Lucida Console", Courier, monospace;
 }
-a {
-    color: var(--card-color);
-    font-size: 0;
-}
 
-.card {
-    width: 500px;
-    height: 280px;
-    background-color: var(--card-color);
-    border-radius: 15px;
-    padding: 20px;
+.container {
+    max-width: 430px;
     margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
 }
-.card-image {
-    width: 130px;
-}
-.card-image img {
+.my-image {
     width: 100%;
 }
-.card-content {
-    width: 350px;
-    float: right;
-}
-h2 {
-    margin: 0px 0px 15px 0px;
-}
+
 ul {
     margin: 5px 0px 0px 15px;
     padding: 0;
 }
+h2 {
+    margin: 20px 0px 0px 0px;
+}
 .uhname {
     color: var(--main-important-color);
 }
-.card-content-text {
-    margin-top: 5px;
+.whoami {
+    margin-bottom: 5px;
 }
-.card-extra > div {
-    margin-top: 10px;
+.item {
+    padding-top: 20px;
 }
-.card-extra-buttons {
-    margin:auto;
+.contact-buttons {
     width: 200px;
+    margin:auto;
     display: flex;
     justify-content: space-between;
 }
@@ -62,8 +44,13 @@ svg {
     height: 40px;
     stroke: var(--main-important-color);
 }
-svg:hover {
+svg:hover,
+svg:active {
     cursor: pointer;
-    stroke: var(--card-color);
+    stroke: var(--bg);
     fill: var(--main-important-color);
+}
+a {
+    color: var(--bg);
+    font-size: 0;
 }
