--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body {
     color: var(--main-font-color);
     font-family: "Lucida Console", Courier, monospace;
     margin: 0;
+    font-size: 1em;
 }
 .container {
     max-width: 430px;
+    min-width: 300px;
     margin: auto;
 }
 .image-holder {
@@ -21,11 +23,11 @@ body {
     width: 100%;
 }
 .info-holder {
-    margin: 20px;
+    margin: 10px;
 }
 h1 {
     margin: 0;
-    font-size: 1.3em;
+    font-size: 1.2em;
 }
 .uhname {
     color: var(--main-important-color);
