--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ body {
     width: 100%;
 }
 .info-holder {
-    margin: 10px;
+    margin: 20px 10px 10px 10px;
 }
 h1 {
     margin: 0;
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 .uhname {
     color: var(--main-important-color);
