--- a/style.css
+++ b/style.css
@@ -43,15 +43,15 @@ ul {
     padding: 0;
 }
 .contact-buttons {
-    width: 50%;
     position: absolute;
     bottom: 0;
     right: 0;
-    padding: 0 1% 1% 0;
+    padding: 0 0 1% 0;
     display: flex;
     justify-content: space-between;
 }
 svg {
+    margin-right: 5px;
     width: 50px;
     height: 50px;
     stroke: var(--main-important-color);
