--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p {
     margin: 0;
     margin: 10px 0px 0px 0px;
 }
-a {
+a, .strong {
     color: var(--main-important-color);
     text-decoration: none;
 }
