--- a/style.css
+++ b/style.css
@@ -40,9 +40,10 @@ p {
     margin: 0;
     margin: 10px 0px 0px 0px;
 }
-a, .strong {
+a, strong {
     color: var(--main-important-color);
     text-decoration: none;
+    font-weight: bold;
 }
 ul {
     margin: 0px 0px 0px 15px;
