--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --main-font-color: rgb(223, 223, 223);
     --main-important-color: orange;
     --bg: black;
+    --bg-reducedopacity: rgba(0, 0, 0, 0.6);
 }
 body {
     background-color: var(--bg);
@@ -13,6 +14,7 @@ body {
 .container {
     max-width: 565px;
     min-width: 300px;
+    position: relative;
     margin: auto;
 }
 .image-container {
@@ -22,6 +24,15 @@ body {
 .image-container > img {
     width: 100%;
 }
+.blogbanner {
+    position: absolute;
+    width: 100%;
+    background-color: var(--bg-reducedopacity);
+    font-size: 1.4em;
+    line-height: 60px;
+    text-align: center;
+    z-index: 1337;
+}
 .info-container {
     margin: 0px 10px 20px 10px;
 }
@@ -30,11 +41,11 @@ body {
 }
 .heading h1 {
     margin: 0px;
-    font-size: 1.5em;
+    font-size: 1.4em;
 }
 h2 {
     margin-bottom: 10px;
-    font-size: 1.5em;
+    font-size: 1.4em;
 }
 p {
     margin: 0;
@@ -56,14 +67,13 @@ li {
     position: absolute;
     bottom: 0;
     right: 0;
-    padding: 0 0 1% 0;
     display: flex;
     justify-content: space-between;
 }
 svg {
-    margin-right: 5px;
-    width: 50px;
-    height: 50px;
+    margin: 0 5px 5px 0px;
+    width: 45px;
+    height: 45px;
     stroke: var(--main-important-color);
 }
 svg:hover {
