--- a/style.css
+++ b/style.css
@@ -27,16 +27,14 @@ body {
 .info-container {
     margin: 0px 10px 20px 10px;
 }
-.heading {
-    margin: 20px 0px 20px 0px;
-}
-.heading h1 {
-    margin: 0px;
+h1 {
+    margin-top: 20px;
+    margin-bottom: 10px;
     font-size: 1.4em;
 }
 h2 {
     margin-bottom: 10px;
-    font-size: 1.4em;
+    font-size: 1.3em;
 }
 p {
     margin: 0;
