--- a/style.css
+++ b/style.css
@@ -1,15 +1,33 @@
 :root {
-    --main-font-color: rgb(223, 223, 223);
-    --main-important-color: orange;
-    --bg: #181818;
-    --bg-reducedopacity: rgba(0, 0, 0, 0.6);
+    --font-color: rgb(223, 223, 223);
+    --important-color: orange;
+    --background-color: #181818;
 }
 body {
-    background-color: var(--bg);
-    color: var(--main-font-color);
+    background-color: var(--background-color);
+    color: var(--font-color);
     font-family: "Lucida Console", Courier, monospace;
-    margin: 0;
     font-size: 1em;
+    margin: 0;
+}
+h1, h2 {
+    font-size: 1.4em;
+}
+a, strong {
+    color: var(--important-color);
+    text-decoration: none;
+    font-weight: bold;
+}
+svg {
+    margin: 0 5px 5px 0;
+    width: 45px;
+    height: 45px;
+    stroke: var(--important-color);
+}
+svg:hover {
+    cursor: pointer;
+    stroke: var(--background-color);
+    fill: var(--important-color);
 }
 .container {
     max-width: 565px;
@@ -25,32 +43,7 @@ body {
     width: 100%;
 }
 .info-container {
-    margin: 0px 10px 20px 10px;
-}
-h1 {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    font-size: 1.4em;
-}
-h2 {
-    margin-bottom: 10px;
-    font-size: 1.3em;
-}
-p {
-    margin: 0;
-    margin: 10px 0px 0px 0px;
-}
-a, strong, .strong {
-    color: var(--main-important-color);
-    text-decoration: none;
-    font-weight: bold;
-}
-ul {
-    margin: 0px 0px 0px 15px;
-    padding: 0;
-}
-li {
-    margin-top: 3px;
+    margin: 10px;
 }
 .contact-buttons {
     position: absolute;
@@ -59,14 +52,4 @@ li {
     display: flex;
     justify-content: space-between;
 }
-svg {
-    margin: 0 5px 5px 0px;
-    width: 45px;
-    height: 45px;
-    stroke: var(--main-important-color);
-}
-svg:hover {
-    cursor: pointer;
-    stroke: var(--bg);
-    fill: var(--main-important-color);
-}
+
