--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
 }
 h1, h2 {
     font-size: 1.4em;
+    margin-bottom: 5px;
+}
+p {
+    margin-top: 5px;
 }
 a, strong {
     color: var(--important-color);
